--- a/website-project/src/app/components/hero.css
+++ b/website-project/src/app/components/hero.css
@@ -1,3 +1,15 @@
+.white-box {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  color: white;
+  background-color: white;
+  z-index: 10;
+  opacity: 0.15;
+}
+
 .pngseq-container {
   height: 100vh;
   width: 100vw;
