removed obsolete videos, removed texture

--- a/website-project/src/app/components/hero.css
+++ b/website-project/src/app/components/hero.css
@@ -4,9 +4,10 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-
+  color: white;
+  background-color: white;
   z-index: 10;
-  opacity: 0.2;
+  opacity: 0.1;
 }
 
 .pngseq-container {
@@ -42,7 +43,7 @@
 }
 
 .pngseq-frame {
-  z-index: 2;
+  z-index: 3;
   display: block;
   image-rendering: auto;
 }
