created name title and animation

--- a/website-project/src/app/globals.css
+++ b/website-project/src/app/globals.css
@@ -40,3 +40,10 @@ a {
     color-scheme: dark;
   }
 }
+
+@font-face {
+  font-family: "CursiveFont";
+  src: url("/fonts/Mutiara.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
